--- a/www/templates/detail.html
+++ b/www/templates/detail.html
@@ -8,14 +8,17 @@
       <ion-item class="item-text-wrap"
         ng-repeat="item in modules | filter: { shortname: whichcamera }">
 
+          <h1><img ng-src="img/{{item.level}}_tn.png"
+                   alt="{{ item.title }} {{item.level | uppercase}}" style="max-height: 50px">{{ item.title }}</h1>
 
-
-          <h2>{{ item.title }}</h2>
-        <img ng-src="img/{{item.level}}_tn.png"
-                                         alt="{{ item.title }} {{item.level | uppercase}}" style="max-height: 50px">
           <h3>{{ item.description }}</h3>
-          <p>{{ item.steps }}</p>
-        <button class="button button-block button-positive ion-ios-world-outline">
+        <ol>
+          <li ng-repeat="item in item.steps">
+            <p>- {{item}}</p>
+          </li>
+        </ol>
+        <!--<p>{{ item.steps[0] }}</p>-->
+        <button class="button button-block button-positive ion-ios-world-outline" ng-click="launchAR('{{item.ARView.URL}}')">
           360° View
         </button>
 
