--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,8 +11,8 @@
   </ion-tab>
 
   <ion-tab title="360° View" icon="ion-aperture"
-           href="#" ng-click="launchAR('SmartPostersView')">
-    <!--<ion-nav-view name="360View-tab"></ion-nav-view>-->
+           href="#/tab/360View" ng-click="launchAR('360View')">
+    <ion-nav-view name="360View-tab"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Learning Map" icon="ion-map"
