--- a/www/templates/learning-map.html
+++ b/www/templates/learning-map.html
@@ -43,7 +43,7 @@
                 class="item-thumbnail-right item-icon-right
                   item-text-wrap"
                 href="#/tab/list/{{module.shortname}}">
-        <img ng-src="img/{{module.level}}_tn.png" alt="{{ module.level }}">
+        <img ng-src="img/{{module.level}}-tn.png" alt="{{ module.level }}">
 
         <h2>{{module.title}}</h2>
         <p>{{module.description}}</p>
