--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -26,38 +26,56 @@
   <label class="bar bar-subheader  item item-input item-select">
     <div class="input-label">Camera Model:</div>
     <!--FIXED UNDEFINED ITEM AS SEEN IN: https://stackoverflow.com/questions/17892220/angularjs-and-select-default-selected-options-are-removed-->
+    <!--DROPDOWN LIST NACH "IONIC SELECT" https://ionicframework.com/docs/v1/components/#select-->
     <select ng-model="selectCamera" ng-init="selectCamera=''"><!--placeholder="Select your Camera"-->
-      <option value="" selected>Select your Camera</option> <!--ng-selected="true" value="" -->
+      <option  value="" selected>Select your Camera</option> <!--ng-selected="true" value="" -->
 
-      <option ng-repeat='camera in cameras'>{{camera.shortname}}</option> <!--Dynamische Kamera-Daten-->
-      <!--<option>D3200</option>--><!--Manuelle Daten zum Test-->
-      <!--<option>D5200</option>--><!--Manuelle Daten zum Test-->
-      <!--<option>D7400</option>--><!--Manuelle Daten zum Test-->
+      <option ng-repeat='camera in cameras' ng-show="camera.format == 'DX'">{{camera.shortname}}</option>
+      <!--Dynamische Kamera-Daten-->
+      <option>-------------</option>
+
+      <option ng-repeat='camera in cameras' ng-show="camera.format == 'FX'">{{camera.shortname}}</option>
+      <!--Dynamische Kamera-Daten-->
+
+      <option>-------------</option>
+
+      <!--Manuelle Daten zum Test-->
+      <option>Beginner</option>
+      <option>Intermediate</option>
+      <option>Advanced</option>
+<!--TODO Prio 1 (Development) - Dynamic Levels filter-->
+      <!--Test for Dynamic Level Filter-->
+<!--
+      <option>-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</option>
+      <option ng-repeat='module in modules' ng-show="module.level == 'beginner'">{{module.level}}</option> &lt;!&ndash;Dynamische Kamera-Daten&ndash;&gt;
+      &lt;!&ndash;TODO find filter https://github.com/a8m/angular-filter#unique  | unique: 'level'&ndash;&gt;
+      <option ng-repeat="module in modules " ng-show="module.level">{{module.level}}</option>
+-->
+
     </select>
 
-    <select ng-model="query"  ng-init="query='D3200'">&lt;!&ndash;placeholder="Select your Camera"&ndash;&gt;
 
-      <option ng-selected="true" value="" >Select your Camera</option>
-      <option>D3200</option>
-      <option>D5200</option>
-      <option>D7400</option>
-    </select>
   </label>
 
-  <!--TODO SECOND SELECT LIST FOR LEVELS BEGINNER, INTERMEDIATE & ADVANCED-->
+  <!--TODO PRIO 2 SECOND SELECT LIST FOR LEVELS BEGINNER, INTERMEDIATE & ADVANCED-->
   <!--
   <label class="bar bar-subheader  item item-input item-select">
     <div class="input-label">
     </div>
     &lt;!&ndash;FIXED UNDEFINED ITEM AS SEEN IN: https://stackoverflow.com/questions/17892220/angularjs-and-select-default-selected-options-are-removed&ndash;&gt;
     <select ng-model="query"  ng-init="query='D3200'">&lt;!&ndash;placeholder="Select your Camera"&ndash;&gt;
-
-      <option ng-selected="true" value="" >Select your Camera</option>
-      <option>D3200</option>
-      <option>D5200</option>
-      <option>D7400</option>
+      <option ng-selected="true" value="" >Select your proficiency level</option>
+      <option>Beginner</option>
+      <option>Intermediate</option>
+      <option>Advanced</option>
+    </select>
     </select>
   </label>
+  -->
+  <!--
+<select ng-model="query"  ng-init="query='D3200'">&lt;!&ndash;placeholder="Select your Camera"&ndash;&gt;
+  <option ng-selected="true" value="" >Select your camera</option>
+
 -->
 
 
@@ -66,7 +84,7 @@
     <ion-refresher on-refresh="doRefresh()">
     </ion-refresher>
 
-    <!--TODO DELETE TEST for CAMERA MODELS AFTER DEVELOPMENT-->
+    <!--TODO AFTER DEV - delete for test for camera models -->
     <!--TEST for CAMERA MODELS-->
     <!--
         <ion-list
@@ -89,36 +107,35 @@
 
     <!--LIST showing LEARNING MODULES-->
     <ion-list type=""
-      show-delete="data.showDelete"
-      show-reorder="data.showReorder">
+              show-delete="data.showDelete"
+              show-reorder="data.showReorder">
 
 
       <!--TEST 2 FOR CAMERA MODELS-->
-      <!--TODO FIGURE OUT DROPDOWN LIST NACH IONIC SELECT https://ionicframework.com/docs/v1/components/#select-->
-      <!--      <ul>
-              <p>This course is available for Cameras: </p>
-              <li ng-repeat="relevantmodel in module.relevantmodels">
-                <p><b>{{relevantmodel | uppercase }}</b></p>
-              </li>
-            </ul>-->
+
+      <!--            <ul>
+                    <p>This course is available for Cameras: </p>
+                    <li ng-repeat="relevantmodel in module.relevantmodels">
+                      <p><b>{{relevantmodel | uppercase }}</b></p>
+                    </li>
+                  </ul>-->
       <!--TEST 2 ENDE-->
 
-      <!--TODO: FIGURE out what item.stars do here-->
-      <ion-item ng-class="{'star': item.star}"
-                ng-repeat='module in modules | filter: selectCamera'
-                class="item item-thumbnail-left
+      <ion-item
+        ng-repeat='module in modules | filter: selectCamera'
+        class="item-thumbnail-left
                   item-text-wrap" href="#/tab/list/{{module.shortname}}">
 
         <img ng-src="img/{{module.level}}-tn.png" alt="{{ module.level }}">
 
         <h2>{{module.title | uppercase }}</h2>
         <p>{{module.description| limitTo: 100}} {{ module.description.length > 100 ? '&hellip;' : '' }}</p>
-        <p><b>{{module.level | uppercase }}</b></p>
+        <!--<p><b>{{module.level | uppercase }}</b></p>-->
         <ion-delete-button class="ion-minus-circled" ng-click="onItemDelete(module)"></ion-delete-button>
         <!--DELETE AFTER DEVELOPMENT - SHOWS RELEVANT PRODUCT MODEL VARIANTS-->
         <ul>
-          <!--TODO: DISPLAY ONLY IF CAMERA MODELS AVAILABLE-->
-          <!--<p>This course is available for Cameras: </p>-->
+          <!--TODO PRIO 2: DISPLAY ONLY IF CAMERA MODELS AVAILABLE-->
+          <p>This course is available for Cameras: </p>
           <li ng-repeat="relevantmodel in module.relevantmodels">
             <p>{{relevantmodel | uppercase }}</p>
           </li>
@@ -128,11 +145,12 @@
                             on-reorder="moveItem(module, $fromIndex, $toIndex)">
         </ion-reorder-button>
 
-<!--
-  Buttons with Dynamic AR content
--->
-        <button class="button icon button-positive outline ion-ios-world-outline" ng-click="launchAR('{{module.ARView.URL}}')"> 360° View
-        </button>
+        <!--
+          Buttons with Dynamic AR content
+        -->
+        <ion-option-button class="icon button-energized outline ion-ios-world-outline"
+                           ng-click="launchAR('{{module.ARView.URL}}')"> 360° View
+          </ion-option-button>
 
 
       </ion-item>
