--- a/www/wikitude-worlds/AR-css/default.css
+++ b/www/wikitude-worlds/AR-css/default.css
@@ -11,3 +11,17 @@
 	opacity: 0.7;
 	display: table;
 }
+
+.button {
+	font-size: large;
+	position: absolute;
+	width: 100%;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	background-color: #BBBBBB;
+	text-align: center;
+	bottom: 0;
+	left: 0;
+	opacity: 0.7;
+	display: table;
+}
