--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,4 +24,17 @@
     <ion-nav-view name="about-tab"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Login" icon="ion-information-circled"
+    href="#/tab/login">
+    <ion-nav-view name="login-tab"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="Register" icon="ion-information-circled"
+    href="#/tab/register">
+    <ion-nav-view name="register-tab"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="Success" icon="ion-information-circled"
+    href="#/tab/success">
+    <ion-nav-view name="success-tab"></ion-nav-view>
+  </ion-tab>
+
 </ion-tabs>
