--- a/www/views/success.html
+++ b/www/views/success.html
@@ -1,7 +1,12 @@
-<div class="card meetings cf">
+<ion-view view-title="Success">
+  <ion-content>
+    <div class="card meetings cf">
 
-  <div class="textintro">
-    <h1>Success</h1>
-    <p>{{ message }}</p>
-  </div>
-</div><!-- meetings cf -->
+      <div class="textintro">
+        <h1>Success</h1>
+        <p>{{ message }}</p>
+      </div>
+    </div><!-- meetings cf -->
+
+  </ion-content>
+</ion-view>
