--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,33 +1,40 @@
-<section class="card login">
-  <form name="myform"
-    ng-submit="login()"
-    novalidate>
+<!--
+<ion-view view-title="Login">
+  <ion-content>
+-->
+    <section class="card login">
+      <form name="myform"
+            ng-submit="login()"
+            novalidate>
 
-    <div class="textintro">
-      <h1>Hi there!</h1>
-      <p>Log-in to access the awesomeness!</p>
-      <p class="message" 
-        ng-show="message"> {{ message }}</p>
-    </div>
+        <div class="textintro">
+          <h1>Hi there!</h1>
+          <p>Log-in to access the awesomeness!</p>
+          <p class="message"
+             ng-show="message"> {{ message }}</p>
+        </div>
 
-    <fieldset>
-      <input type="email" name="email" placeholder="Email"
-       ng-model="user.email" ng-required="true">
-      <p class="error validationerror"
-      ng-show="myform.email.$invalid && myform.email.$touched">
-      Must be a valid email</p>
+        <fieldset>
+          <input type="email" name="email" placeholder="Email"
+                 ng-model="user.email" ng-required="true">
+          <p class="error validationerror"
+             ng-show="myform.email.$invalid && myform.email.$touched">
+            Must be a valid email</p>
 
 
-      <input type="password" name="password" placeholder="Password"
-      ng-model="user.password" ng-required="true">
-      <p class="error validationerror"
-      ng-show="myform.password.$invalid && myform.email.$touched">
-      Password is required</p>
+          <input type="password" name="password" placeholder="Password"
+                 ng-model="user.password" ng-required="true">
+          <p class="error validationerror"
+             ng-show="myform.password.$invalid && myform.email.$touched">
+            Password is required</p>
 
-    </fieldset>
+        </fieldset>
 
-    <button type="submit" class="btn"
-      ng-disabled="myform.$invalid">Login</button>
-    <p>or <a ng-href="#/register">register</a></p>
-  </form>
-</section>
+        <button type="submit" class="btn"
+                ng-disabled="myform.$invalid">Login
+        </button>
+        <p>or <a ng-href="#/tab/register">register</a></p>
+      </form>
+    </section>
+  </ion-content>
+</ion-view>
