ionic layout good but breaks authentication

--- a/www/views/register.html
+++ b/www/views/register.html
@@ -44,5 +44,5 @@
         <p>or <a ng-href="#/tab/login">login</a></p>
       </form>
     </section>
-  </ion-content>
-</ion-view>
+  <!--</ion-content>-->
+<!--</ion-view>-->
