--- a/www/views/success.html
+++ b/www/views/success.html
@@ -5,6 +5,7 @@
       <div class="textintro">
         <h1>Success</h1>
         <p>{{ message }}</p>
+        <a ng-href="#/tab/login" ng-click="logout()">logout</a>
       </div>
     </div><!-- meetings cf -->
 
